# tactile-python

./: .gitignore  README.md  demo.py  setup.cfg
examples/: demo.py  random_tiles.py  random_tiles_p5.py
tactile/: __init__.py  preamble.py  tactile.py  tiling_data.py
tactile-python/: demo.py  preamble.py  tactile.py  tiling_data.py
