[metadata]
name = tactile
version = 0.0.1
author = David Braun
author_email = braun@ccrma.stanford.edu
description = Python module for representing and manipulating tilings of the 2D plane.
keywords = tiling, geometry
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DBraun/tactile-python
project_urls =
    Bug Tracker = https://github.com/DBraun/tactile-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = tactile
python_requires = >=3.6
tests_require = pytest

[options.packages.find]
where = tactile